--- a/src/components/Weather/Weather.css
+++ b/src/components/Weather/Weather.css
@@ -15,7 +15,7 @@
 }
 
 .Weather__form input {
-  padding: var(--_padding);
+  padding: 0.5rem;
   margin: 0.5rem;
   border: 1px solid hsl(var(--accent));
   text-align: center;
@@ -35,4 +35,15 @@
 .Weather__form__states {
   text-align: center;
   margin-top: 1rem;
+}
+
+.Weather__results__animation__container {
+  max-height: 0;
+  overflow: hidden;
+
+  transition: 1000ms;
+}
+
+.Weather__results__animation__container.open {
+  max-height: 750px;
 }
