--- a/src/index.css
+++ b/src/index.css
@@ -63,14 +63,13 @@ h6 {
   isolation: isolate;
 }
 
-
 :root {
-  --_hue: 245;
+  --_hue: 250;
   --_radius: 0.2em;
-  --_padding: 0.5rem
+  --_padding: 0.5rem;
 
   /* Light Mode */
-  --bg--light: var(--_hue) 30% 94%;
+  --bg--light: var(--_hue) 60% 94%;
   --txt--light: var(--_hue) 40% 5%;
   --accent--light: var(--_hue) 55% 50%;
   --muted--light: var(--_hue) 30% 99%;
@@ -102,6 +101,8 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   background-color: hsl(var(--bg));
   color: hsl(var(--txt));
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
 }
 
 ::selection {
